tests/baselines/reference/arithmeticOnInvalidTypes.errors.txt
arithmeticOnInvalidTypes.ts(3,9): error TS2454: Variable 'x' is used before being assigned.
arithmeticOnInvalidTypes.ts(3,9): error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.
arithmeticOnInvalidTypes.ts(3,13): error TS2454: Variable 'y' is used before being assigned.
arithmeticOnInvalidTypes.ts(4,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(4,10): error TS2454: Variable 'x' is used before being assigned.
arithmeticOnInvalidTypes.ts(4,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(4,14): error TS2454: Variable 'y' is used before being assigned.
arithmeticOnInvalidTypes.ts(5,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(5,10): error TS2454: Variable 'x' is used before being assigned.
arithmeticOnInvalidTypes.ts(5,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(5,14): error TS2454: Variable 'y' is used before being assigned.
arithmeticOnInvalidTypes.ts(6,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(6,10): error TS2454: Variable 'x' is used before being assigned.
arithmeticOnInvalidTypes.ts(6,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
arithmeticOnInvalidTypes.ts(6,14): error TS2454: Variable 'y' is used before being assigned.


==== arithmeticOnInvalidTypes.ts (15 errors) ====
    var x: Number;
    var y: Number;
    var z = x + y;
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
            ~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.
                ~
!!! error TS2454: Variable 'y' is used before being assigned.
    var z2 = x - y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                 ~
!!! error TS2454: Variable 'y' is used before being assigned.
    var z3 = x * y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                 ~
!!! error TS2454: Variable 'y' is used before being assigned.
    var z4 = x / y;
             ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
                 ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                 ~
!!! error TS2454: Variable 'y' is used before being assigned.